<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SkyTrace Basic Locator</string>
	<string name="my_location">My location</string>
	<string name="map_mode">Map mode</string>
	<string name="about">About</string>
	<string name="about_message"></string>
	<string name="info">Info</string>
	<string name="route">Route</string>
	
	<string name="server">track.skytrace.com:8080</string>
	<string name="account_title">Billing Account ID</string>
	<string name="account_summary">not the same as a username</string>
	<string name="account"></string>
	<string name="user_title">Username</string>
	<string name="user_summary">generally your email address</string>
	<string name="user"></string>
	<string name="password_title">Password</string>
	<string name="password_summary">Encrypted on the server</string>
	<string name="password"></string>
	
	<string name="preference_behavior">Run settings</string>
	<string name="preference_Skytrace">Account Settings</string>
	<string name="preference_latitude">Google latitude</string>
	<string name="wifi_title">Use any Open AP</string>
	<string name="wifi_summary">Enables aggressive automatic WiFi connection to any open AP .</string>
	<string name="precision_title">Logging precision</string>
	<string name="precision_summary">The size of interval between GPS fixes.</string>
	<string name="menu_settings">Settings</string>
	<string name="service_networkstatus" formatted="false">Logging: %s (%s with cell tower and wifi)</string>
	<string name="service_gpsstatus" formatted="false">Logging: %s (%s with %d satellites)</string>
	<string name="service_start">Activating tracking</string>
	<string name="service_connectiondisabled">Network is disabled, network location logging is without effect.</string>
</resources>
